--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,6 +11,14 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
