--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,10 @@
 
 <table>
   <tr>
-    <th>Name</th>
+    <th>First name</th>
+    <th>Last name</th>
     <th>Email</th>
+    <th>Password</th>
     <th></th>
     <th></th>
     <th></th>
@@ -11,8 +13,10 @@
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.name %></td>
+    <td><%= user.first_name %></td>
+    <td><%= user.last_name %></td>
     <td><%= user.email %></td>
+    <td><%= user.password %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
